--- a/www/public/resources/styles/run.css
+++ b/www/public/resources/styles/run.css
@@ -34,6 +34,8 @@
     white-space: -o-pre-wrap;    /* Opera 7 */
     word-wrap: break-word;       /* Internet Explorer 5.5+ */
     background-color: #182b3e;
+    font-size: 14px;
+    line-height: 20px;
     padding: 20px;
     margin: 0;
 }
@@ -98,8 +100,4 @@
     opacity: 0.8;
     position: absolute;
     right: 10px;
-}
-
-.getPackagesDiv pre {
-    font-size: 13px;
 }
