--- a/www/public/resources/styles/common.css
+++ b/www/public/resources/styles/common.css
@@ -1,5 +1,5 @@
 /**
- *  v1.5
+ *  v1.6
  */
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
@@ -106,18 +106,13 @@ pre {
 .center { text-align: center; }
 .baseline { vertical-align: baseline; }
 .font-size-11{font-size: 11px !important}.font-size-12{font-size: 12px !important}.font-size-13{font-size: 13px !important}.font-size-14{font-size: 14px !important}.font-size-15{font-size: 15px !important}.font-size-16{font-size: 16px !important}.font-size-17{font-size: 17px !important}.font-size-18{font-size: 18px !important}
-.lowopacity, .lowopacity-cst { opacity: 0.33; } /* lowopacity-cst is used for constant lowopacity even on hover */
-.mediumopacity { opacity: 0.55 }
-.verylowopacity { opacity: 0.08; }
-.lowopacity:hover, .mediumopacity:hover, .verylowopacity:hover { opacity: 1 }
-.opacity-80 { opacity: 0.80; }
-.wordbreakall { word-break: break-all; }
+.mediumopacity,.mediumopacity-cst{opacity: 0.55}
+.lowopacity,.lowopacity-cst{opacity: 0.33} /* lowopacity-cst is used for constant lowopacity even on hover */
+.verylowopacity {opacity: 0.08}
+.opacity-80,.opacity-80-cst{opacity: 0.80}
+.lowopacity:hover,.mediumopacity:hover,.verylowopacity:hover{opacity: 1}
+.wordbreakall {word-break: break-all}
 
-.div-28 { width: 28%; padding: 10px; }.div-29 { width: 29%; padding: 10px; }.div-30 { width: 30%; padding: 10px; }
-.div-33 { width: 33%; padding: 10px; }.div-45 { width: 45%; padding: 10px; }.div-48 { width: 48%; padding: 10px; }
-.div-49 { width: 49%; padding: 10px; }.div-50 { width: 50%; padding: 10px; }.div-65 { width: 65%; padding: 10px; }
-.div-67 { width: 67%; padding: 10px; }.div-68 { width: 68%; padding: 10px; }.div-69 { width: 69%; padding: 10px; }
-.div-70 { width: 70%; padding: 10px; }
 .flex { display: flex; }
 .flex-div-15 { flex: 0 0 14%; }.flex-div-20 { flex: 0 0 19%; }.flex-div-25 { flex: 0 0 24%; }.flex-div-30 { flex: 0 0 29%; }
 .flex-div-33 { flex: 0 0 32%; }.flex-div-40 { flex: 0 0 39%; }.flex-div-50 { flex: 0 0 47%; }.flex-div-60 { flex: 0 0 59%; }
@@ -520,7 +515,6 @@ textarea {
     font-size: 13px;
     vertical-align: middle;
     display: inline-block;
-    /* padding: 6px 8px 6px 8px; */
     padding: 6px;
     min-width: 12px;
     min-height: 12px;
@@ -764,6 +758,23 @@ textarea {
 
 #loading img {
     height: 18px;
+}
+
+/**
+ *  Loading veil
+ */
+.loading-veil {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #182b3e82;
+    border-radius: 8px;
+    z-index: 999;
 }
 
 /**
