--- a/www/public/resources/styles/run.css
+++ b/www/public/resources/styles/run.css
@@ -33,6 +33,7 @@
     white-space: -pre-wrap;      /* Opera 4-6 */
     white-space: -o-pre-wrap;    /* Opera 7 */
     word-wrap: break-word;       /* Internet Explorer 5.5+ */
+    word-break: break-all;
     background-color: #182b3e;
     font-size: 14px;
     line-height: 1.5;
