--- a/www/public/resources/styles/common.css
+++ b/www/public/resources/styles/common.css
@@ -330,7 +330,37 @@ input::placeholder {
     width: 400px;
 }
 
-/* Tous les boutons */
+/* All checkboxes unless onoff-switch-input */
+input[type=checkbox]:not(.onoff-switch-input) {
+    width: 16px;
+    height: 16px;
+    background-color: white;
+    border-radius: 50%;
+    vertical-align: middle;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
+    outline: none;
+    cursor: pointer;
+}
+
+input[type=checkbox]:not(.onoff-switch-input):checked {
+    background-color: #15bf7f;
+    position: relative;
+    &:before {
+        content: '✔';
+        display: block;
+        color: white;
+        font-size: 14px;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+    }
+}
+
+/* All buttons */
 [class^="btn-"], [class*=" btn-"], input::file-selector-button {
     padding: 7px 5px 7px 5px;
     border: none;
@@ -568,6 +598,48 @@ textarea {
     width: 8px;
     height: 8px;
     border-radius: 60px;
+}
+
+/* Green checkmark, red crossmark and yellow pending icons */
+.checkmark, .crossmark, .pending {
+    display: inline-block;
+    position: relative;
+    min-width: 14px;
+    min-height: 14px;
+    max-width: 14px;
+    max-height: 14px;
+    border-radius: 50%;
+    text-align: center;
+    vertical-align: middle;
+    font-size: 12px;
+}
+.checkmark {
+    background-color: #15bf7f;
+}
+.crossmark {
+    background-color: #ff0044;
+}
+.pending {
+    background-color: #ffb536;
+}
+.checkmark::after, .crossmark::after, .pending::after {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    line-height: 1;
+}
+.checkmark::after {
+    content: '✔';
+    color: white;
+}
+.crossmark::after {
+    content: '🞪';
+    color: white;
+}
+.pending::after {
+    content: '⧗';
+    color: white;
 }
 
 .label-black, .label-white, .label-green, .label-blue, .label-red, .label-yellow {
